Added home-section and navbar

--- a/index.html
+++ b/index.html
@@ -7,6 +7,31 @@
     <title>Передовая IT студия</title>
 </head>
 <body>
-    
+    <nav class="navbar">
+        <div class="navbar container">
+            <div class="navbar-item">
+                <a class="navbar-item" href="#">Главная</a>
+            </div>
+            <div class="navbar-item">
+                <a class="navbar-item" href="#">Наши проекты</a>
+            </div>
+            <div class="navbar-item">
+                <a class="navbar-item" href="#">Услуги</a>
+            </div>
+            <div class="navbar-item">
+                <a class="navbar-item" href="#">Новости</a>
+            </div>
+            <div class="navbar-item">
+                <a class="navbar-item" href="#">Контакты</a>
+            </div>
+        </div>
+    </nav>
+    <section class="home-section">
+        <div class="home-section-content container">
+            <h3>Передовая IT студия</h3>
+            <h1>Мы создаем легкие решения сложных задач и проблем</h1>
+            <button class="primary-button">Все услуги</button>
+        </div>
+    </section>
 </body>
 </html>
