added section Work

--- a/index.html
+++ b/index.html
@@ -33,5 +33,49 @@
             <button class="primary-button">Все услуги</button>
         </div>
     </section>
+    <section class="work">
+        <div class="work-content container">
+            <h2 class="work-content-header">Мы создаем мобильные приложения для крупных корпораций</h2>
+            <p class="work-content-descr">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. </p>
+            <div class="work-content-items">
+                <div class="work-content-item">
+                    <div class="work-content-item-img-border">
+                        <div class="work-content-item-img">
+                            <img src="assets/img/work-item.png" alt="">
+                        </div>
+                    </div>
+                    <div class="work-content-item-descr">
+                        <p class="work-content-item-descr-header">Создание сайтов</p>
+                        <p class="work-content-item-descr-descr">Lorem Ipsum - это текст- "рыба", часто используе в печати и вэб-дизайне.</p>
+                    </div>
+                </div>
+                <div class="work-content-item">
+                    <div class="work-content-item-img-border">
+                        <div class="work-content-item-img">
+                            <img src="assets/img/work-item.png" alt="">
+                        </div>
+                    </div>
+                    <div class="work-content-item-descr">
+                        <p class="work-content-item-descr-header">Создание сайтов</p>
+                        <p class="work-content-item-descr-descr">Lorem Ipsum - это текст- "рыба", часто используе в печати и вэб-дизайне.</p>
+                    </div>
+                </div>
+                <div class="work-content-item">
+                    <div class="work-content-item-img-border">
+                        <div class="work-content-item-img">
+                            <img src="assets/img/work-item.png" alt="">
+                        </div>
+                    </div>
+                    <div class="work-content-item-descr">
+                        <p class="work-content-item-descr-header">Создание сайтов</p>
+                        <p class="work-content-item-descr-descr">Lorem Ipsum - это текст- "рыба", часто используе в печати и вэб-дизайне.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="work-content-button">
+                <button class="primary-button">Все услуги</button>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
