added section Standarts

--- a/index.html
+++ b/index.html
@@ -77,5 +77,44 @@
             </div>
         </div>
     </section>
+    <section class="standarts">
+        <div class="container">
+            <div class="standarts-content">
+                <div class="standarts-content-descr">
+                    <h2>Высокие стандарты разработки</h2>
+                    <p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.  стандартной "рыбой" для текстов на латинице с начала XVI века. </p>
+                    <a href="">Подробнее о компании</a>
+                </div>
+                <img src="assets/img/standarts-content-img.png" alt="">
+            </div>
+            <div class="standarts-projects">
+                <div class="standarts-projects-item">
+                    <img src="assets/img/standarts-projects-item-img.png" alt="">
+                    <p class="number">125</p>
+                    <p class="descr">Our projects</p>
+                </div>
+                <div class="standarts-projects-item">
+                    <img src="assets/img/standarts-projects-item-img.png" alt="">
+                    <p class="number">125</p>
+                    <p class="descr">Our projects</p>
+                </div>
+                <div class="standarts-projects-item">
+                    <img src="assets/img/standarts-projects-item-img.png" alt="">
+                    <p class="number">125</p>
+                    <p class="descr">Our projects</p>
+                </div>
+                <div class="standarts-projects-item">
+                    <img src="assets/img/standarts-projects-item-img.png" alt="">
+                    <p class="number">125</p>
+                    <p class="descr">Our projects</p>
+                </div>
+                <div class="standarts-projects-item">
+                    <img src="assets/img/standarts-projects-item-img.png" alt="">
+                    <p class="number">125</p>
+                    <p class="descr">Our projects</p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
