--- a/index.html
+++ b/index.html
@@ -116,5 +116,36 @@
             </div>
         </div>
     </section>
+    <section class="our-works">
+        <div class="container">
+            <div class="our-works-title">
+                <h2>Ннаши работы, на которых мы специализируемся</h2>
+                <div class="our-works-title-button">
+                    <button class="primary-button">Все услуги</button>
+                </div>
+            </div>
+            <div class="our-works-content">
+                <div class="our-works-item">
+                    <img src="assets/img/our-works-item-img.jpg" alt="image">
+                    <h5><span>01. </span>Исследование и упаковка</h5>
+                    <p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
+                    <a href="">Подробнее</a>
+                </div>
+                <div class="our-works-item">
+                    <img src="assets/img/our-works-item-img.jpg" alt="image">
+                        <h5><span>01. </span>Исследование и упаковка</h5>
+                        <p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
+                        <a href="">Подробнее</a>
+                </div>
+                    <div class="our-works-item">
+                        <img src="assets/img/our-works-item-img.jpg" alt="image">
+                        <h5><span>01. </span>Исследование и упаковка</h5>
+                        <p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
+                        <a href="">Подробнее</a>
+                    </div>
+                
+            </div>
+        </div>
+    </section>
 </body>
 </html>
