--- a/index.html
+++ b/index.html
@@ -133,19 +133,27 @@
                 </div>
                 <div class="our-works-item">
                     <img src="assets/img/our-works-item-img.jpg" alt="image">
-                        <h5><span>01. </span>Исследование и упаковка</h5>
-                        <p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
-                        <a href="">Подробнее</a>
+                    <h5><span>01. </span>Исследование и упаковка</h5>
+                    <p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
+                    <a href="">Подробнее</a>
                 </div>
-                    <div class="our-works-item">
-                        <img src="assets/img/our-works-item-img.jpg" alt="image">
-                        <h5><span>01. </span>Исследование и упаковка</h5>
-                        <p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
-                        <a href="">Подробнее</a>
-                    </div>
-                
+                <div class="our-works-item">
+                    <img src="assets/img/our-works-item-img.jpg" alt="image">
+                    <h5><span>01. </span>Исследование и упаковка</h5>
+                    <p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
+                    <a href="">Подробнее</a>
+                </div>
             </div>
         </div>
+    </section>
+    <section class="subscription-section">
+        <h3>Подпишись на нашу рассылку</h3>
+        <p>Полезные статьи, акции, новости - получите все это сейчас!</p>
+        <div class="subscribe-block">
+            <input type="text" placeholder="Ваш email">
+            <button class="primary-button">Подписаться</button>
+        </div>
+        <span>Мы не шлем спам, и передаем никому ваши данные.</span>
     </section>
 </body>
 </html>
