--- a/index.html
+++ b/index.html
@@ -146,6 +146,20 @@
             </div>
         </div>
     </section>
+    <section class="our-projects">
+        <div class="our-projects container">
+            <h2 class="our-projects-header">Наши проекты</h2>
+            <p class="our-projects-descr">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. </p>
+            <div class="our-projects-items">
+                <img src="assets/img/our-projects-item.jpg" alt="" class="our-projects-item">
+                <img src="assets/img/our-projects-item.jpg" alt="" class="our-projects-item">
+                <img src="assets/img/our-projects-item.jpg" alt="" class="our-projects-item">
+                <img src="assets/img/our-projects-item.jpg" alt="" class="our-projects-item">
+            </div>
+            <button class="primary-button">Все проекты</button>
+        </div>
+
+    </section>
     <section class="subscription-section">
         <h3>Подпишись на нашу рассылку</h3>
         <p>Полезные статьи, акции, новости - получите все это сейчас!</p>
