--- a/index.html
+++ b/index.html
@@ -158,7 +158,19 @@
             </div>
             <button class="primary-button">Все проекты</button>
         </div>
-
+    </section>
+    <section class="our-video">
+        <div class="our-video container">
+            <h2 class="our-video-header">Видео о нашей работе</h2>
+            <p class="our-video-descr">Просто посмотрите, как мы работаем</p>
+        </div>
+        <div class="video">
+            <img src="assets/img/video.png" alt="">
+            <div class="play">
+                <img src="assets/img/play-button.png" alt="">
+                <p class="play-text">Смотреть видео</p>
+            </div>
+        </div>
     </section>
     <section class="subscription-section">
         <h3>Подпишись на нашу рассылку</h3>
