--- a/index.html
+++ b/index.html
@@ -173,13 +173,94 @@
         </div>
     </section>
     <section class="subscription-section">
-        <h3>Подпишись на нашу рассылку</h3>
-        <p>Полезные статьи, акции, новости - получите все это сейчас!</p>
-        <div class="subscribe-block">
-            <input type="text" placeholder="Ваш email">
-            <button class="primary-button">Подписаться</button>
+        <div class="subscription-section container">
+            <h3>Подпишись на нашу рассылку</h3>
+            <p>Полезные статьи, акции, новости - получите все это сейчас!</p>
+            <div class="subscribe-block">
+                <input type="text" placeholder="Ваш email">
+                <button class="primary-button">Подписаться</button>
+            </div>
+            <span>Мы не шлем спам, и передаем никому ваши данные.</span>
         </div>
-        <span>Мы не шлем спам, и передаем никому ваши данные.</span>
     </section>
+    <footer>
+        <div class="container">
+            <div class="contacts">
+                <p class="contacts-header">Контактная информация</p>
+                <div class="contacts-item">
+                    <img src="assets/img/contacts-item-1.png" alt="">
+                    <p>test@test.ru</p>
+                </div>
+                <div class="contacts-item">
+                    <img src="assets/img/contacts-item-2.png" alt="">
+                    <p>+8 777 555 66 99</p>
+                </div>
+                <div class="contacts-item">
+                    <img src="assets/img/contacts-item-3.png" alt="">
+                    <p>Москва, Бульвар Ленина 33</p>
+                </div>
+            </div>
+            <div class="links">
+                <p class="links-header">Основные ссылки</p>
+                <div class="links-item">
+                    <img src="assets/img/arrow.png" alt="">
+                    <a href="">Главная</a>
+                </div>
+                <div class="links-item">
+                    <img src="assets/img/arrow.png" alt="">
+                    <a href="">Наши проекты</a>
+                </div>
+                <div class="links-item">
+                    <img src="assets/img/arrow.png" alt="">
+                    <a href="">Наши услуги</a>
+                </div>
+                <div class="links-item">
+                    <img src="assets/img/arrow.png" alt="">
+                    <a href="">Контакты</a>
+                </div>
+            </div>
+            <div class="projects">
+                <p class="projects-header">Наши проекты</p>
+                <div class="projects-item">
+                    <img src="assets/img/arrow.png" alt="">
+                    <a href="">РосНано</a>
+                </div>
+                <div class="projects-item">
+                    <img src="assets/img/arrow.png" alt="">
+                    <a href="">Сколково</a>
+                </div>
+                <div class="projects-item">
+                    <img src="assets/img/arrow.png" alt="">
+                    <a href="">Проект “Восток”</a>
+                </div>
+                <div class="projects-item">
+                    <img src="assets/img/arrow.png" alt="">
+                    <a href="">ТЭЦ Калининграда</a>
+                </div>
+            </div>
+            <div class="social-networks">
+                <p class="social-networks-header">Социальные сети</p>
+                <div class="social-networks-item">
+                    <img src="assets/img/arrow.png" alt="">
+                    <a href="">VK.com</a>
+                </div>
+                <div class="social-networks-item">
+                    <img src="assets/img/arrow.png" alt="">
+                    <a href="">Instagram</a>
+                </div>
+                <div class="social-networks-item">
+                    <img src="assets/img/arrow.png" alt="">
+                    <a href="">Facebook</a>
+                </div>
+                <div class="social-networks-item">
+                    <img src="assets/img/arrow.png" alt="">
+                    <a href="">Twitter</a>
+                </div>
+            </div>
+        </div>
+        <div class="rights">
+            <p class="rights-text">(с) 2019. Все права защищены.</p>
+        </div>
+    </footer>
 </body>
 </html>
